Version 0.6.5
-------------
- native DigitalMars import library (Masashi Ktamura)

Version 0.6.4
-------------
- native (Open)Watcom C/C++ import library (Thiadmer Riemersma)

Version 0.6.3
-------------
- fixed winspool.drv loading (Tom Bishop)
- native Borland C++ import library which doesn't use
  unicows_wrapper.dll (Seclan)

Version 0.6.2
-------------
- added more symbols

Version 0.6.1
-------------
- unicows_wrapper.dll was made almost twice smaller
- 0.6 binaries had some wrong symbols, this is now fixed

Version 0.6
-----------
- added unicows_wrapper.dll, which is a helper that makes it possible to
  use libunicows with *any* compiler, independently of the way its
  import libraries work
- added import library for Borland C++ (uses unicows_wrapper.dll)

Version 0.5
-----------
- initial release