@@ -75,42 +75,45 @@ creating such import library for <tt>unicows.dll</tt>, <tt>unicows.dll</tt>
 is <em>not</em> used on NT/2000/XP systems when using the wrapper.
 
 
-<h3>Help needed!</h3>
-
-In order to provide precompiled
-libraries for as many compilers as possible, your help is needed! I'd like to
-have libraries and makefiles for at least DigitalMars compiler in addition to
-currently supported ones before 1.0 release.
-
-
-
 <h3>Download</h3>
 
 <table border="1" cellpadding="5">
 
 <tr>
     <td><a href="http://www.mingw.org">Mingw32</a></td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.4-mingw32.zip">libunicows-0.6.4-mingw32.zip</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.5-mingw32.zip">libunicows-0.6.5-mingw32.zip</a></td>
 </tr>
 
 <tr>
     <td>Microsoft&nbsp;Visual&nbsp;C++&nbsp;6</td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.4-msvc6.zip">libunicows-0.6.4-msvc6.zip</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.5-msvc6.zip">libunicows-0.6.5-msvc6.zip</a></td>
 </tr>
 
 <tr>
     <td>Borland&nbsp;C++</td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.4-bcc32.zip">libunicows-0.6.4-bcc32.zip</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.5-bcc32.zip">libunicows-0.6.5-bcc32.zip</a></td>
 </tr>
 
 <tr>
     <td>Watcom&nbsp;C/C++</td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.4-watcom.zip">libunicows-0.6.4-watcom.zip</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.5-watcom.zip">libunicows-0.6.5-watcom.zip</a></td>
+</tr>
+
+<tr>
+    <td>DigitalMars</td>
+    <td><a
+    href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.5-dmc.zip">libunicows-0.6.5-dmc.zip</a></td>
+</tr>
+
+<tr>
+    <td>LCC-Win32</td>
+    <td><a
+    href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.5-lcc.zip">libunicows-0.6.5-lcc.zip</a></td>
 </tr>
 
 <tr>
     <td>Source code</td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.4-src.tar.gz">libunicows-0.6.4-src.tar.gz</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-0.6.5-src.tar.gz">libunicows-0.6.5-src.tar.gz</a></td>
 </tr>
 
 </table>
@@ -124,7 +127,8 @@ See also the SF.net <a href="http://sourceforge.net/projects/libunicows">project
 
 <b>version 0.6.5</b>
 <ul>
-<li>native DigitalMars import library (Masashi Ktamura)</li>
+    <li>native DigitalMars import library (Masashi Ktamura)</li>
+    <li>native LCC-Win32 import library (Thiadmer Riemersma)</li>
 </ul>
 <b>version 0.6.4</b><br>
 <ul>
